--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "landing-page",
+  "name": "bank-landing-page",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "build:production": "webpack --mode production",
     "build:development": "webpack --mode development",
@@ -24,6 +24,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "file-loader": "^6.2.0",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
